Thu Jul 18 23:14:44 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-reauthenticate.c (trivfs_S_io_reauthenticate): Use noinstall
	version of ports_create_port.  Put it in the port set after the
	node has been fully initialized.

Sat Jul 13 20:15:56 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-reauthenticate.c (trivfs_S_io_reauthenticate): Repeat
 	ports_create_port, auth_server_authenticate, io_restrict_auth, and
 	*trivfs_protid_create_hook for as long as we get EINTR.  Deal with
 	other errors without crashing.

Sun Jul  7 16:06:37 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-reauthenticate.c (trivfs_S_io_reauthenticate): Don't use
 	MACH_MSG_TYPE_MOVE_SEND; it's unreliable.

Thu Jun 20 22:54:01 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-get-fs-options.c (trivfs_S_file_get_fs_options):
	Call trivfs_get_options, and package up the results.
	* fsys-get-options.c (trivfs_S_fsys_get_options): Likewise.
	* fsys-set-options.c (trivfs_S_fsys_set_options): Call
	trivfs_set_options.
	* set-options.c, get-options.c: New files.
	* trivfs.h: Add trivfs_set_options & trivfs_get_options.
	* Makefile (OTHERSRCS): Add set-options.c & get-options.c.

Wed Jun 19 21:29:45 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* trivfs.h (trivfs_runtime_argp): New declaration.
	* fsys-set-options.c (trivfs_S_fsys_set_options): Use
	trivfs_runtime_argp to parse options.
	* runtime-argp.c: New file.
	* Makefile (OTHERSRCS): Add runtime-argp.c.

Sat Jun 15 19:50:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* fsys-stubs.c (trivfs_S_fsys_set_options, trivfs_S_fsys_get_options,
 	trivfs_S_file_get_fs_options): Functions removed.
	* fsys-set-options.c, fsys-get-options.c, file-get-fs-options.c:
	New files.
	* Makefile (FSSRCS): Add file-get-fs-options.c
	(FSYSSRCS): Add fsys-set-options.c & fsys-get-options.c.

Thu May  9 20:03:28 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-identity.c: New file.