@@ -1,3 +1,8 @@
+Thu Aug 15 16:14:33 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* io-pathconf.c (trivfs_S_io_pathconf): Implement by calling
+	underlying node.
+
 Thu Jul 18 23:14:44 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
 
 	* io-reauthenticate.c (trivfs_S_io_reauthenticate): Use noinstall
